{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 152,
  "lineage": "9432e334-f35f-b33c-e841-91de57fe2850",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "alb-log.hiroe.komatsuelec.co.jp",
                "enabled": true
              }
            ],
            "enable_deletion_protection": true,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:330778405506:loadbalancer/app/example/3190a6231abf3dbc",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "example",
            "subnets": [
              "subnet-015b9ac9034580d28",
              "subnet-0326ca828e85d7beb"
            ]
          },
          "depends_on": [
            "aws_s3_bucket.alb_log",
            "aws_subnet.public_0",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-89952a75",
            "domain": "vpc",
            "id": "eipalloc-07b07932fe70c3b53",
            "network_interface": "eni-036ec6e24c88d56af",
            "private_dns": "ip-10-0-1-104.eu-west-3.compute.internal",
            "private_ip": "10.0.1.104",
            "public_dns": "ec2-52-47-171-82.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.171.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-ae2df663",
            "domain": "vpc",
            "id": "eipalloc-0c5330a594ff8117e",
            "network_interface": "eni-0163bff54b3f5a351",
            "private_dns": "ip-10-0-2-147.eu-west-3.compute.internal",
            "private_ip": "10.0.2.147",
            "public_dns": "ec2-15-188-105-247.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.105.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_internet_gateway.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sandbox",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b4b78aae82b30f1",
            "arn": "arn:aws:ec2:eu-west-3:330778405506:instance/i-02271a07da9c2442d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-02271a07da9c2442d",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7f0b943e7f96ee2",
            "private_dns": "ip-172-31-43-144.eu-west-3.compute.internal",
            "private_ip": "172.31.43.144",
            "public_dns": "ec2-35-180-2-87.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.2.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04634936ef5829224",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "example-ec2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e7fa28aa",
            "tags": {
              "Name": "sandbox-01"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-083bdb46c372e3fb6"
            ]
          },
          "depends_on": [
            "aws_security_group.example_ec2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b4b78aae82b30f1",
            "arn": "arn:aws:ec2:eu-west-3:330778405506:instance/i-062ba127b9bb5b8dc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-062ba127b9bb5b8dc",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0ce50b3b6473fb909",
            "private_dns": "ip-172-31-42-197.eu-west-3.compute.internal",
            "private_ip": "172.31.42.197",
            "public_dns": "ec2-35-180-30-130.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.30.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f984b33cbec19762",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "example-ec2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e7fa28aa",
            "tags": {
              "Name": "sandbox-02"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-083bdb46c372e3fb6"
            ]
          },
          "depends_on": [
            "aws_security_group.example_ec2"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b4b78aae82b30f1",
            "arn": "arn:aws:ec2:eu-west-3:330778405506:instance/i-0137efa35e7d76020",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0137efa35e7d76020",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0199c6f22afd20352",
            "private_dns": "ip-172-31-37-216.eu-west-3.compute.internal",
            "private_ip": "172.31.37.216",
            "public_dns": "ec2-35-180-63-176.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.63.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-064ff0c3664a3a031",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "example-ec2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e7fa28aa",
            "tags": {
              "Name": "sandbox-03"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-083bdb46c372e3fb6"
            ]
          },
          "depends_on": [
            "aws_security_group.example_ec2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-078098cf683909676",
            "owner_id": "330778405506",
            "vpc_id": "vpc-00f3c72517b390a78"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07b07932fe70c3b53",
            "id": "nat-0d98d39703ef2960b",
            "network_interface_id": "eni-036ec6e24c88d56af",
            "private_ip": "10.0.1.104",
            "public_ip": "52.47.171.82",
            "subnet_id": "subnet-0326ca828e85d7beb"
          },
          "depends_on": [
            "aws_eip.nat_gateway_0",
            "aws_internet_gateway.example",
            "aws_subnet.public_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5330a594ff8117e",
            "id": "nat-0330355918dab0848",
            "network_interface_id": "eni-0163bff54b3f5a351",
            "private_ip": "10.0.2.147",
            "public_ip": "15.188.105.247",
            "subnet_id": "subnet-015b9ac9034580d28"
          },
          "depends_on": [
            "aws_eip.nat_gateway_1",
            "aws_internet_gateway.example",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0abfaffc05279f9ca1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0d98d39703ef2960b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0abfaffc05279f9ca",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.example_0",
            "aws_route_table.private_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-05a7e18e48fe8600c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0330355918dab0848",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05a7e18e48fe8600c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_nat_gateway.example_1",
            "aws_route_table.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-078098cf683909676",
            "id": "r-rtb-00487107a92bbce531080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00487107a92bbce53",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "depends_on": [
            "aws_internet_gateway.example",
            "aws_route_table.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0abfaffc05279f9ca",
            "owner_id": "330778405506",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0d98d39703ef2960b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-00f3c72517b390a78"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-05a7e18e48fe8600c",
            "owner_id": "330778405506",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0330355918dab0848",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-00f3c72517b390a78"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00487107a92bbce53",
            "owner_id": "330778405506",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078098cf683909676",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-00f3c72517b390a78"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e2def1dd94e3991",
            "route_table_id": "rtb-0abfaffc05279f9ca",
            "subnet_id": "subnet-07fa4e044f64a9905"
          },
          "depends_on": [
            "aws_route_table.private_0",
            "aws_subnet.private_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087b68f9d58bb8cab",
            "route_table_id": "rtb-05a7e18e48fe8600c",
            "subnet_id": "subnet-03a88b90646ca5dba"
          },
          "depends_on": [
            "aws_route_table.private_1",
            "aws_subnet.private_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9738029706b0d36",
            "route_table_id": "rtb-00487107a92bbce53",
            "subnet_id": "subnet-0326ca828e85d7beb"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_0"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0972019485ffb3a9e",
            "route_table_id": "rtb-00487107a92bbce53",
            "subnet_id": "subnet-015b9ac9034580d28"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:330778405506:security-group/sg-083bdb46c372e3fb6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083bdb46c372e3fb6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-ec2",
            "name_prefix": null,
            "owner_id": "330778405506",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-a2e4abcb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:330778405506:subnet/subnet-07fa4e044f64a9905",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.65.0/24",
            "id": "subnet-07fa4e044f64a9905",
            "map_public_ip_on_launch": false,
            "owner_id": "330778405506",
            "vpc_id": "vpc-00f3c72517b390a78"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:330778405506:subnet/subnet-03a88b90646ca5dba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.66.0/24",
            "id": "subnet-03a88b90646ca5dba",
            "map_public_ip_on_launch": false,
            "owner_id": "330778405506",
            "vpc_id": "vpc-00f3c72517b390a78"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_0",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:330778405506:subnet/subnet-0326ca828e85d7beb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0326ca828e85d7beb",
            "map_public_ip_on_launch": true,
            "owner_id": "330778405506",
            "tags": {
              "Name": "example-public-0"
            },
            "vpc_id": "vpc-00f3c72517b390a78"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:330778405506:subnet/subnet-015b9ac9034580d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-015b9ac9034580d28",
            "map_public_ip_on_launch": true,
            "owner_id": "330778405506",
            "tags": {
              "Name": "example-public-1"
            },
            "vpc_id": "vpc-00f3c72517b390a78"
          },
          "depends_on": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:330778405506:vpc/vpc-00f3c72517b390a78",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0965339df10a0d7a4",
            "default_route_table_id": "rtb-09cd12bd92c7bfc90",
            "default_security_group_id": "sg-053cf0bb73b993a33",
            "dhcp_options_id": "dopt-e9c09480",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-00f3c72517b390a78",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09cd12bd92c7bfc90",
            "owner_id": "330778405506",
            "tags": {
              "Name": "example"
            }
          }
        }
      ]
    }
  ]
}